ChangeLog for Simple Chat Client
========================= 

Version dev
* Added to context menu: add/remove channel to favourites, moderation, channel settings

Version 1.9.0 (16.05.2014)
================================
* Fixed paste multi-line text - now cut on last space
* Added youtube and images preview in main window
* Fixed toolbar icons orientation 
* Moved updates to notification
* Nick moved to program title
* Nicklist with sex in origin
* Restyled option dialog
* Added support for Linux Music Players (using mpris)
* Added topic url clickable
* Added time format option
* Added emoticons hint
* Added commands hint
* Added user avatar in tabs
* Added new default channel avatars
* Added extra channels list button
* Added alt+1..0 key modifier
* Added alt+left and alt+right key modifier
* Fixed update
* Fixed nicklist margins
* Fixed tab order
* Fixed white space characeters
* Fixed join/rejoin speed
* Fixed opening url
* Dynamic font height in inputline
* Added whois icons

Version 1.8.1 (24.07.2013)
================================
* Fixed offline messages
* Fixed invite focus

Version 1.8.0 (08.06.2013)
================================
* Added join channel button
* Added updates in options
* Added auto connect in options
* Added hide nicklist in options
* Added /clear command
* Added time to invite list
* Fixed animated icon
* Changed default emoticons,sounds dir
* Added nick option in context menu
* Fixed avatar display
* Fixed sound
* Fixed offline messages
* Many bugfixes

Version 1.7.3 (07.04.2013)
================================
* Fixed replace emoticons
* Fixed logs
* Fixed commands

Version 1.7.2 (24.03.2013)
================================
* Fixed replace emoticons
* Fixed notes

Version 1.7.1 (23.03.2013)
================================
* Fixed replace emoticons
* Fixed reconnect
* Fixed avatars bug

Version 1.7.0 (15.02.2013)
================================
* Added theme dialog
* Faster reconnect after wrong login