@@ -1,5 +1,3 @@
 #define SCC_BIN_DIR "${SCC_BIN_DIR}"
 #define SCC_SHARE_DIR "${SCC_SHARE_DIR}"
 #define SCC_DATA_DIR "${SCC_DATA_DIR}"
-
-#cmakedefine01 WITH_KAMERZYSTA
