@@ -58,6 +58,7 @@ private slots:
     void whois();
     void profile();
     void cam();
+    void kamerzysta();
     void friendsAdd();
     void friendsDel();
     void ignoreAdd();
